fix overflowing rule descriptions by simply not rendering them

--- a/src/ressources/small-interpreter.css
+++ b/src/ressources/small-interpreter.css
@@ -196,6 +196,7 @@ div.stepper {
 .stepper .info-toggle {
   margin-top: 1em;
   margin-bottom: 1.5em;
+  margin-left: 0.5em;
   float: right;
 }
 .stepper .info-toggle:hover {
